--- a/future-station-challenge/pom.xml
+++ b/future-station-challenge/pom.xml
@@ -35,11 +35,11 @@
     </dependencyManagement>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>org.apache.camel.quarkus</groupId>-->
-<!--            <artifactId>camel-quarkus-vertx-http</artifactId>-->
-<!--            <version>3.8.2</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-vertx-http</artifactId>
+            <version>3.8.2</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-gson</artifactId>
